   connect to CIM Server on the same system without having to specify a password. 
   Please refer to "doc/LocalCIMSecurity.pdf" for more information on design.  
   This component only works on unix and it's not linked in with the main build. 
   When authentication framework is defined this component may need to be 
   modified to integrate with the framework.


---------------------------------------------------------------------------
Version 0.99.x (Fixes to version 0.99) in Process

NOTE: Please do not input anything to this branch except for critical
fixes.  This is, in effect, 1.0 and we do not want to use it for
development.

----------------------------------------------------------------------------

Version 0.98.0 - Work in progress (This number skipped)
Version -.99.0 - Tagged as version 0.99,17 July 8:00 am - KS

1. (Mike Brasher) Added support for class association operations
    (references(), associators(), referenceNames(), associatorNames()).

2. (Jenny Yu - HP) Fixed problem in CGIClient.cpp to handle double quotes
   in the HTML URL reference for passing instance names.

3. (Mike Brasher) Mass substitution to prepend CIM_ERR to CIM Status Codes.

4. (Mike Brasher) Added CIM Message types in preparation for qeueing.

3. (Denise E. - HP) HP-UX specific changes to lslp-perl-linux,h and slp.h to
   allow slp to compile.

4. (Mike Brasher) - Finalized CIM messages.

5. (Mike Brasher) - Added queue ids concept (using hash table which maps
   ids to queue pointers).

6. (Mike Brasher) - Started integration of message queues with ServerHandler
   and Dispatcher.

7. (Chip Vincent) - Update Provider2 interfaces. Made changes to Dispatcher
and
   CIMProvider to support both interfaces. Added CIMOMHandle and sample
   ResponseHandler for Provider2 interface.

8. (Mike Brasher) - Replaced dispatcher with a queue-based dispatcher.

9. (Mike Brasher) - Retrofited CIMOMHandle to be queue-based.
